# mobile-cicd-installer

./: .editorconfig  .gitignore  Cargo.toml  LICENSE  README.md  justfile
src/: app.rs  cli.rs  main.rs  util.rs
