[package]
name = "ravn-mobile-cicd-installer"
authors = ["Kevin Del Castillo <kevindelcastillo@ravn.co>"]
description = "RAVN Mobile CI/CD installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
atty = "0.2.14"
clap = { version = "4.4.11", features = ["derive", "env"] }
inquire = "0.6.2"
shells = "0.2.0"
