[package]
name = "ravn-mobile-cicd-installer"
authors = ["Kevin Del Castillo <kevindelcastillo@ravn.co>"]
description = "RAVN Mobile CI/CD installer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
atty = "0.2.14"
clap = { version = "4.4.12", features = ["derive", "env"] }
colorful = "0.2.2"
fs_extra = "1.3.0"
inquire = "0.6.2"
shells = "0.2.0"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
